add: clinicas proximas

--- a/src/assets/i18n/en-us.json
+++ b/src/assets/i18n/en-us.json
@@ -4,5 +4,6 @@
   "topbar_partners_link": "Partners",
   "topbar_testimonials_link": "Testimonials",
   "topbar_recommendation_link": "Recommendation",
-  "topbar_profile_link": "Account"
+  "topbar_profile_link": "Account",
+  "topbar_historic_link": "Historical"
 }
