--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -4,5 +4,6 @@
   "topbar_partners_link": "Parceiros",
   "topbar_testimonials_link": "Depoimentos",
   "topbar_recommendation_link": "Indicação",
-  "topbar_profile_link": "Perfil"
+  "topbar_profile_link": "Perfil",
+  "topbar_historic_link": "Histórico"
 }
