--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -5,5 +5,6 @@
   "topbar_testimonials_link": "Depoimentos",
   "topbar_recommendation_link": "Indicação",
   "topbar_profile_link": "Perfil",
-  "topbar_historic_link": "Histórico"
+  "topbar_historic_link": "Histórico",
+  "topbar_historic_create" : "Criar ponto na linha do tempo"
 }
